--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
+    "prettier": "prettier --write",
     "lint": "eslint",
     "commit": "git-cz"
   },
