✨feat(测试1): dsfsdfsdfsf

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "prettier": "prettier --write",
-    "lint": "eslint",
-    "commit": "git-cz"
+    "lint": "eslint src/**/*",
+    "commit": "git add . && git-cz"
   },
   "config": {
     "commitizen": {
